# neuropil

./: .clang-format  .cproject  .dockerignore  .gitattributes  .gitignore  .gitlab-ci-build.yml.j2  .gitlab-ci-deployment.yml  .gitlab-ci-deployment.yml.j2  .gitlab-ci.yml  .gitmodules  .hgignore  .project  CI.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README  README.md  SConstruct  SECURITY.md  build_info.py  check_object_ids.py  colorize.py  commands  config.status  default.nix  do  flake.nix  install.py  invoke.bash  invoke.py  libtool  node_list  nose2.cfg  plantuml.py  requirements.txt  run_end2end_test.py  shell.nix  (+7 more)
.a.out.dSYM/Contents/: Info.plist
.dsym/Contents/: Info.plist
.git_hooks/: pre-commit
.gitlab/: sast-ruleset.toml
LICENSES/: BSD-2-Clause.txt  OSL-3.0.txt  X11.txt
bindings/: build_swig.sh  neuropil.i  neuropil_wrap.c  np_aaatoken.i  np_identity.i  np_log.i  np_message.i  np_msgproperty.i  np_tree.i  np_treeval.i  np_types.i  np_val.i  setup.py  test_neuropil.py
bindings/java/: .gitignore  pom.xml
bindings/luajit/: build.sh  neuropil.lua
bindings/python_cffi/: MANIFEST.in  README.md  build.sh  build_swig.sh  neuropil.py  neuropil_build.py  neuropil_obj.py  neuropil_search.py  setup.py  testneuropil.py
configs/: nose2.cfg  requirements.txt  valgrind.supp
configs/docker/: ci-enviroment.Dockerfile  dev-enviroment.Dockerfile  prod-enviroment.Dockerfile  python-enviroment.Dockerfile
doc/: Makefile  neuropil_2016.key  neuropil_todos.key  periodic_html.py
doc/Verifpal_documentation/: Neuropil-Verification-With-Verifpal-tool.md
doc/schemas/: message.py  np_types.py
doc/source/: api.rst  apps_tools.rst  bottom_up.rst  compared_to.rst  conf.py  contributers.rst  contributors.rst  core_concepts.rst  faq.rst  glossary.rst  identities.rst  index.rst  intro.rst  knowhow.rst  license.rst  msg.structure.rst  ngiassure_dtma.rst  ngiassure_ldts.rst  ngizero.rst  ngizerodiscovery.rst  ngizerosearch.rst  protocol.msg_structure.rst  protocol.rst  protocol.s11n.rst  protocol.steps.rst  protocol.token.rst  realms.rst  realms_identities.rst  security.rst  token.rst  trademark.rst  tutorial.rst  whatis.rst
doc/verifpal/: DHT_Message.vp  E2EE_with_Multiple_Recivers.vp  Handshake_Message.vp  Join_Message1.vp  Join_Message2.vp  MQTT_Model.vp  Message_Intent_token.vp  Pheromone_Message.vp  User_space_Message.vp
docker/: dev-enviroment.Dockerfile
examples/: daemonize.c  example_helper.c  example_helper.h  neuropil_bloom.c  neuropil_cloud.c  neuropil_controller.c  neuropil_controller.lua  neuropil_crawler.py  neuropil_demo_service.c  neuropil_echo_client.c  neuropil_echo_server.c  neuropil_enhanced_bloom.c  neuropil_file_receiver.c  neuropil_http_node.c  neuropil_hydra.c  neuropil_identity.c  neuropil_identity_showcase.c  neuropil_iot_car.c  neuropil_node.c  neuropil_pingpong.c  neuropil_privacy_relay.c  neuropil_raffle.c  neuropil_raspberry.c  neuropil_realmmaster.c  neuropil_receiver.c  neuropil_receiver.lua  neuropil_receiver_cb.c  neuropil_receiver_lb.c  neuropil_search_nlnet.c  neuropil_search_nlnet_2.c  neuropil_search_node.c  neuropil_search_node_2.c  neuropil_sender.c  neuropil_sender.lua  neuropil_sender_threaded.c  neuropil_shared_hydra.c  neuropil_test.c  neuropil_vpn.c  np_conversion.c
examples/web/: np_http.c  np_http.h
examples/workshop/: Makefile  pilarnet.c
ext_tools/event/: ev.c  ev.h  ev_epoll.c  ev_kqueue.c  ev_poll.c  ev_port.c  ev_select.c  ev_vars.h  ev_win32.c
ext_tools/gpio/: bcm2835.c  bcm2835.h
ext_tools/makeheaders/: makeheaders.py  vs_conformity.py
framework/files/: file.c  file.h
framework/http/: evhtp-config.h  evhtp-internal.h  evhtp.c  evhtp.h  htparse.c  htparse.h  np_http.c  np_http.h  urldecode.c  urldecode.h
framework/identity/: np_identity.c  np_identity.h  np_keystore.c  np_keystore.h
framework/prometheus/: prometheus.c  prometheus.h
framework/search/: model.py  neuropil_search.h  np_bktree.c  np_bktree.h  np_index.c  np_index.h  np_search.c  np_search.h  np_search_mxproperties.c
framework/statemachine/: statemachine.c  statemachine.h
framework/sysinfo/: np_sysinfo.c  np_sysinfo.h
framework/tuntap/: README.md  np_tuntap.c  np_tuntap.h  (+3 more)
include/: aaatoken.h  base.h  dllist.h  dtime.h  include.h  job_queue.h  jrb.h  jval.h  key.h  log.h  map.h  message.h  network.h  neuropil.h  neuropil_attributes.h  neuropil_data.h  neuropil_log.h  node.h  np_aaatoken.h  np_ackentry.h  np_attributes.h  np_axon.h  np_bloom.h  np_bootstrap.h  np_constants.h  np_container.h  np_crypto.h  np_data.h  np_dendrit.h  np_dhkey.h  np_event.h  np_eventqueue.h  np_evloop.h  np_ffi.h  np_glia.h  np_heap.h  np_http.h  np_identity.h  np_interface.h  np_jobqueue.h  (+38 more)
neuropil_lib.xcodeproj/: project.pbxproj
scripts/: class_diagram.py  colorize.py  loki-query.py  puml.py  state_diagram.py  tmux.py  update_libsodium.bash
src/: Makefile  aaatoken.c  cmp.c  dllist.c  dtime.c  job_queue.c  jrb.c  jval.c  key.c  log.c  message.c  network.c  neuropil.c  neuropil_attributes.c  neuropil_data.c  node.c  np_aaatoken.c  np_ackentry.c  np_axon.c  np_bloom.c  np_bootstrap.c  np_container.c  np_crypto.c  np_dendrit.c  np_dhkey.c  np_event.c  np_eventqueue.c  np_evloop.c  np_glia.c  np_http.c  np_identity.c  np_interface.c  np_jobqueue.c  np_jtree.c  np_key.c  np_keycache.c  np_legacy.c  np_log.c  np_memory.c  np_memory_v2.c  (+28 more)
test/: Makefile  Makefile.am  bla.txt  ipv6_addrinfo.c  jrb_test_msg.c  neuropil_controller  neuropil_controller.c  neuropil_hydra.c  neuropil_node  neuropil_node.c  neuropil_pingpong.c  neuropil_realmmaster.c  neuropil_receiver  neuropil_receiver.c  neuropil_receiver_cb.c  neuropil_sender  neuropil_sender.c  neuropil_shared_hydra.c  rb_bench.c  test_aaatoken.c  test_chunk_message.c  test_dh.c  test_dhkey.c  test_fuzzing.c  test_jrb_impl.c  test_jrb_serialization.c  test_key.c  test_keycache.c  test_list_impl.c  test_macros.c  test_memory.c  test_memory_alloc.c  test_message.c  test_node.c  test_node_ser.c  test_route.c  test_scache.c  test_sodium_crypt.c  test_suite.c  test_suites.c  (+2 more)
(+517 files in other folders)
